# kgm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clean.sh  make-electron-distrib.py  mkdocs.yml  pyproject.toml  requirements.txt
apps/: CMakeLists.txt
apps/shacled/: CMakeLists.txt  data-node.cpp  data-node.h  fuseki-utils.cpp  fuseki-utils.h  http-utils.cpp  http-utils.h  node-manager.cpp  node-manager.h  node.cpp  node.h  rdf-manager.cpp  rdf-manager.h  rdf-node-manager.cpp  rdf-node-manager.h  rdfsclass-node.cpp  rdfsclass-node.h  run-shacled.cpp  shell.html  vis-manager.cpp  vis-manager.h  vis-node-data.cpp  vis-node-data.h  vis-node-manager.cpp  vis-node-manager.h  vis-node-rdfsclass.cpp  vis-node-rdfsclass.h  vis-node.cpp  vis-node.h  visnode-userclass-actions.cpp  visnode-userclass-actions.h  visnode-userclass.cpp  visnode-userclass.h  visnode-userobject.cpp  visnode-userobject.h  visnode.cpp  visnode.h
apps/shacled-electron/: main.js  package.json  run-shacled.html  run-shacled.js  run-shacled.wasm
apps/shacled/widgets/: toggle-lock.cpp  toggle-lock.h
docs/: Makefile  about-mkdocs.md  addendum.md  backends.md  hello_extension.py  index.md  introduction.md  keyword_linker.py  kgm-userguide.md  mkdocs.yml  setup.py
docs.old/: Makefile
docs/docs/: abbreviations.md  about-mkdocs.md  addendum.md  backends.md  fuseki.md  index.md  kgm-introduction.md  kgm-userguide.md
docs/docs/examples/alice-bob/: README.md  ab.data.ttl  ab.shacl.ttl
docs/docs/examples/northwind/: northwind.shacl.ttl
docs/docs/javascripts/: custom-abbr.js
docs/docs/sparql-example/: README.md  ab-small.data.ttl  ab-small.shacl.ttl  ab.data.ttl  ab.ttl  construct-shacl-viz-graph.rq  rdflib-sparql-short.py  rdflib-sparql.py
examples/alice-bob/: README.md  ab.shacl.ttl  ab.ttl  data.ttl  show-shacl.py  t.py
examples/alice-bob/KUI/: data.ttl
examples/alice-bob/simple/: README.md  data.shacl.ttl  data.ttl  show-shacl.py
examples/alice-bob/simple-shacl/: README.md  data.shacl.ttl  data.ttl
examples/northwind/: README.md  build-rdf.py
kgm/: __init__.py  config_utils.py  database.py  kgm_editor_main.py  kgm_gencode_main.py  kgm_graph.py  kgm_main.py  kgm_utils.py  known_prefixes.py  known_prefixes.py.TODEL  prefix_manager.py.TODEL  prefixes.py  pyuser_object.py.BAK  rdf_terms.py  rdf_utils.py  sparql_utils.py  user_class.py  user_object.py
kgm-utils/: setup.py
kgm-utils/examples/alice-bob/: ab.ttl  graphviz_utils.py
kgm/cmds/: kgm_graph.py  kgm_validate.py  ksd_parser.py
kgm/cmds/kgm/: graph_cmds.py  kgm_misc.py  ksd_parser.py  main.py  subcmd_database.py  subcmd_graph.py  subcmd_ksd.py  subcmd_misc.py  subcmd_toplevel.py  toplevel_cmds.py
kgm/cmds/kgm_gencode/: gencode_cs.py  main.py
kgm/gencode/: gencode_cs.py
libs/: CMakeLists.txt
libs/lib-apploops/: CMakeLists.txt  loop-runner.cpp  loop-runner.h
libs/lib-utils/: CMakeLists.txt  dict.h  fuseki-utils.cpp  fuseki-utils.h  http-utils.cpp  http-utils.h  image.cpp  image.h  known-prefixes.cpp  known-prefixes.h  mt-safe-queue.h  rdf-utils.cpp  rdf-utils.h  string-utils.cpp  string-utils.h  uuid.cpp  uuid.h
libs/resources/fonts/: Play-Regular.h
libs/resources/img/: lock.h  unlock.h
py-packages/: kgm-editor-installer  kgm-installer  kgm-installer.py
py-packages/kgm/: README.md  build-electron-distrib.py  pyproject.toml  setup.py.TODEL
py-packages/kgm-editor/: build-electron-distrib.py  pyproject.toml
py-packages/kgm-editor/kgm_editor/: __main__.py
py-packages/kgm/bin.TODEL/: kgm
py-packages/kgm/examples/northwind/: README.md
py-packages/kgm/kgm/: __main__.py  kgm.shacl.ttl  kgm_editor.py  kgm_gencode_main.py  kgm_ksd_main.py  kgm_main.py  kgm_utils.py  known_prefixes.py.TODEL  rdf_utils.py  sparql_utils.py
py-packages/kgm/kgm/cmds/: kgm_config.py  kgm_graph.py  kgm_graph_shacled.py  kgm_ls.py  kgm_misc.py  kgm_update.py  kgm_validate.py  ksd_parser.py
py-packages/kgm/kgm/codegen/: kgm_csharp.py
py-packages/kgm/kgm/examples/alice-bob/: README.md  t.py
py-packages/kgm/kgm/gencode/: gencode_cs.py
py-packages/kgm/kgm/kgm-wasm/: run-shacled.html  run-shacled.js  run-shacled.wasm
py-packages/kgm/kgm/ksd/: ksd_parser.py
src-packages/: README.md
src-packages/imgui/: CMakeLists.txt
src-packages/imgui-node-editor/: CMakeLists.txt
tests/: ccu-series.ksd  mq-client.py  mq-server.py  series.ksd  t-edit-userobject.py  t-load-userobject.py  t-save-ccu-series.py  t-save-series.py  t-save-ts.py  t-save-userobject.py  t-userobject.py  timeseries.ksd
tests/ccu/: NEW-example-of-ccu-usage.txt  README.md  ccu.ksd  example-of-ccu-usage.txt  t-save-ccu-series.py  test-ccu.ksd
tests/human-pet/: README.md  human-pet.ksd  t-edit-userobject.py  t-load-userobject.py  t-save-userobject.py
tests/labpack/: labpack.ksd  t-labpack.py
tests/mdvne/: mdvne.ksd  t-create.py
tests/waste/: t-labpack.py  waste-kinds.ksd
utils/: gse  kgm  requirements.txt  sparql_utils.py  vgm  vrgs
