# using https://github.com/pypa/sampleproject/blob/main/pyproject.toml as reference

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kgm"
version = "0.3.2"
description = "Knowledge Graph Management - command line utilities"
readme = "README.md"
requires-python = ">=3.10"
#license = {file = "LICENSE.txt"}
#keywords = ["sample", "setuptools", "development"]
authors = [
  {name = "Andrei Smirnov", email = "asmirnov@geisel-software.com"}
]

dependencies = ["nanoid", "click", "rdflib", "sparqlwrapper", "pandas", "graphviz", "lark"]

[project.urls]
"Source" = "https://github.com/GeiselSoftware/kgm"

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
[project.scripts]
kgm = "kgm.cmds.kgm.main:main"
kgm-gencode="kgm.cmds.kgm_gencode.main:main"
