# using https://github.com/pypa/sampleproject/blob/main/pyproject.toml as reference

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kgm-editor"
version = "0.0.1"
description = "Knowledge Graph Management SHACL editor"
readme = "README.md"
requires-python = ">=3.9"
#license = {file = "LICENSE.txt"}
#keywords = ["sample", "setuptools", "development"]
authors = [
  {name = "Andrei Smirnov", email = "asmirnov@geisel-software.com"}
]

[project.urls]
"Source" = "https://github.com/GeiselSoftware/kgm/py-packages/kgm"

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
[project.scripts]
kgm-editor = "kgm_editor.__main__:main"

#[tool.setuptools.packages.find]
#where = ["src"]

[tool.setuptools]
#include_package_data = true
packages = ["kgm_editor"]

[tool.setuptools.package-data]
"kgm_editor" = [
	     "electron-dist/*",
	     "electron-dist/*/*",
	     "electron-dist/*/*/*",
	     "electron-dist/*/*/*/*",
	     "electron-dist/*/*/*/*/*",
	     "electron-dist/*/*/*/*/*/*",
	     "electron-dist/*/*/*/*/*/*/*",
	     "electron-dist/*/*/*/*/*/*/*/*",
	     "electron-dist/*/*/*/*/*/*/*/*/*",
	     "electron-dist/*/*/*/*/*/*/*/*/*/*",
	     "electron-dist/*/*/*/*/*/*/*/*/*/*/*",
	     "electron-dist/*/*/*/*/*/*/*/*/*/*/*/*"
	     ]
