# using https://github.com/pypa/sampleproject/blob/main/pyproject.toml as reference

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kgm"
version = "0.0.0"
description = "Knowledge Graph Management"
readme = "README.md"
requires-python = ">=3.10"
#license = {file = "LICENSE.txt"}
#keywords = ["sample", "setuptools", "development"]
authors = [
  {name = "Andrei Smirnov", email = "asmirnov@geisel-software.com"}
]

dependencies = ["click", "rdflib", "sparqlwrapper", "pandas", "graphviz"]

[project.urls]
"Source" = "https://github.com/GeiselSoftware/KGM/py-packages/kgm"

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
[project.scripts]
kgm = "kgm.__main__:main"

#[tool.setuptools.packages.find]
#where = ["src"]

[tool.setuptools.package-data]
"kgm" = ["kgm-wasm/*"]
